CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(test_program)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -g -Wall")
SET(CMAKE_BUILD_TYPE "Debug")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -fcoroutines")
add_definitions(-DEZIO_ENABLE_COROUTINE=1)
IF( ASAN_SWITCH )
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
ENDIF()
LINK_LIBRARIES("${PROJECT_SOURCE_DIR}/../../../../../lib/libezio.so")
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)
INCLUDE_DIRECTORIES(../../../../../include)
ADD_EXECUTABLE(test_program ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(test_program -lpthread dl)
